migrated job table and added app.post to post jobs on postman

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "KO",
+    "username": "philip",
     "password": null,
     "database": "job_board_dev",
     "host": "127.0.0.1",
