--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "KO",
+    "username": "philip",
     "password": null,
     "database": "job_board_dev",
     "host": "127.0.0.1",
@@ -18,6 +18,7 @@
     "password": null,
     "database": "job_board_production",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "ssl": true
   }
 }
