--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
