--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,6 @@
     "password": null,
     "database": "job_board_production",
     "host": "127.0.0.1",
-    "dialect": "postgres",
-    "ssl": true
+    "dialect": "postgres"
   }
 }
