--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "philip",
-    "password": "null",
+    "username": "phil",
+    "password": null,
     "database": "job_board_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
