--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.16.0"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
