--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DB_PASS=
 DB_NAME=job_board_dev
 HOST=127.0.0.1
 
+FACEBOOK_CALLBACK_URL=http://localhost:3000/auth/facebook/callback
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+
