--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-es6-template-engine": "^2.2.3",
     "express-session": "^1.17.2",
+    "http": "^0.0.1-security",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
